# DoctorAppontmentMultiAgentic

./: agents.py  main.py  pyproject.toml  requirements.txt
data_model/: models.py
notebook/: multiagent_system.ipynb
